// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GroupsDetailsPanel /> renders Groups detailsPanel 1`] = `
<styled.div
  id="dtpanel-groups"
>
  Mock Child
  <Connect(DetailWrapper)
    contains="outboundIdentifierLists"
    data-automation="outboundIdentifierListsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      inherited={false}
      onActionButtonClick={[Function]}
      text=" Outbound Identifier Lists"
      userHasUpdatePermission={true}
    />
    <_class
      contains="outboundIdentifierLists"
      filtered={Array []}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="reasonLists"
    data-automation="reasonListsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Presence Reason Lists"
      userHasUpdatePermission={true}
    />
    <_class
      contains="reasonLists"
      filtered={Array []}
      inherited={false}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
</styled.div>
`;

exports[`<GroupsDetailsPanel /> renders Groups detailsPanel with no update permision 1`] = `
<styled.div
  id="dtpanel-groups"
>
  <DetailsPanelAlert
    text="This group is inherited and cannot be edited"
  />
  Mock Child
  <Connect(DetailWrapper)
    contains="outboundIdentifierLists"
    data-automation="outboundIdentifierListsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      inherited={true}
      onActionButtonClick={[Function]}
      text=" Outbound Identifier Lists"
      userHasUpdatePermission={false}
    />
    <_class
      contains="outboundIdentifierLists"
      filtered={Array []}
      inherited={true}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={false}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="reasonLists"
    data-automation="reasonListsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      inherited={true}
      onActionButtonClick={[Function]}
      text=" Presence Reason Lists"
      userHasUpdatePermission={false}
    />
    <_class
      contains="reasonLists"
      filtered={Array []}
      inherited={true}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={false}
    />
  </Connect(DetailWrapper)>
</styled.div>
`;

exports[`<GroupsDetailsPanel /> renders Groups detailsPanel with status disabled 1`] = `
<styled.div
  id="dtpanel-groups"
>
  <DetailsPanelAlert
    text="This group is inherited and cannot be edited"
  />
  Mock Child
  <Connect(DetailWrapper)
    contains="outboundIdentifierLists"
    data-automation="outboundIdentifierListsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      inherited={true}
      onActionButtonClick={[Function]}
      text=" Outbound Identifier Lists"
      userHasUpdatePermission={true}
    />
    <_class
      contains="outboundIdentifierLists"
      filtered={Array []}
      inherited={true}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="reasonLists"
    data-automation="reasonListsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      inherited={true}
      onActionButtonClick={[Function]}
      text=" Presence Reason Lists"
      userHasUpdatePermission={true}
    />
    <_class
      contains="reasonLists"
      filtered={Array []}
      inherited={true}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
</styled.div>
`;
